kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mock-cp-court-service-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - mock-cp-court-service.apps.cloud-platform-live-0.k8s.integration.dsd.io
  rules:
    - host: mock-cp-court-service.apps.cloud-platform-live-0.k8s.integration.dsd.io
      http:
        paths:
          - path: /
            backend:
              serviceName: mock-cp-court-service-service
              servicePort: 8000
